fix: :bug: Fix z-index of the sidebar

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ i{
 .wrapper .sidebar-visible{
     width: 250px;
     height: 100vh;
+    z-index: 9999;
     padding: 30px 0;
     background-color: #E79057;
     color: white;
